<resources>
    <string name="app_name">Guess the anime place</string>

    <string name="attackontitan">Attack on Titan</string>
    <string name="naruto">Naruto</string>
    <string name="onepiece">One Piece</string>
    <string name="deathnote">Death Note</string>
    <string name="dragonball">Dragon Ball Z</string>
    <string name="bleach">Bleach</string>
    <string name="fullmetalalchemisbrotherhood">Fullmetal Alchemist: Brotherhood</string>
    <string name="onepunchman">One Punch Man</string>
    <string name="myheroacademia">My Hero Academia</string>
    <string name="hunterxhunter">Hunter x Hunter</string>

    <string name="demonslayer">Demon Slayer</string>
    <string name="tokyoghoul">Tokyo Ghoul</string>
    <string name="baclkclover">Black Clover</string>
    <string name="bluelock">Blue Lock</string>

    <string name="about_screen">About</string>
    <string name="connct_us_tv">Please send us your feedback or describe any issue you are experiencing</string>
    <string name="connct_us_hint">Write your feedback here</string>
    <string name="connct_us_sent">send</string>

    <string name="connect_us">Connect Us</string>
    <string name="share_app">Share App</string>
    <string name="social_media">Social Media</string>
    <string name="rate_app">Rate App</string>
    <string name="settings_languages">Languages</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="who_am_i">who am I</string>

    <string name="about_dis">Hi I am Mohamed, an application developer who is interested in the world of programming and information technology. I have a passion Since the beginning of my career in development, best and best and best solutions I have experience in developing mobile applications and electronic device applications, and I use them in retail and retail uses.I believe in connecting and programming applications in a sustainable and flexible way, allowing me to cope with future changes and improve products over time. I believe that technology can make a real collective difference in people\'s lives, and I aim to develop services that meet the needs of society and improve its digital experience.</string>
    <string name="connet_us_tost">Please enter the message</string>


    <string name="quiz_results_tv">The test is over. This is the result</string>
    <string name="quiz_results_correct">Correct Answer </string>
    <string name="quiz_results_wrong">Wrong Answer</string>
    <string name="quiz_results_btn">Start New Quiz</string>
    <string name="tost_choose">Please choose one of the options</string>
    <string name="btn_setting">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="contact_dev">Contact the developer</string>
    <string name="check_update">Check for an update</string>
    <string name="lang_select">Please select the desired language</string>
    <string name="re_playe">Do you want to start a new game?The game will be restarted from the beginning!!</string>

    <string name="quiz_over">The questions are over, wait for us in another update and the addition of new characters</string>

    <string name="update_tost">There is no update</string>
    <string name="invite">Come and play the game Guess the anime character by his eye</string>
</resources>