<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="16dp"

    tools:context=".ConnectUsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/connct_us_tv"
        android:fontFamily="@font/cairobold"

        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedbackEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connct_us_hint"

            android:inputType="textMultiLine"
            android:minLines="3"
            android:fontFamily="@font/cairobold"

            android:gravity="top|start"  />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:fontFamily="@font/cairobold"
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/connct_us_sent"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>